--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,20 +904,20 @@ li.time:not(:last-child):before {
 }
 .portfolio-detail {
     margin-top: 50px;
-    margin-right: 50px;
+    margin-inline-end: 50px;
 }
 .portfolio-img img {
     width: 100%;
     border-radius: 20px;
 }
 .button--moema i {
-    padding-right: 15px;
+    padding-inline-end: 15px;
 }
 
 button.filter-btn {
     background-color: transparent;
     color: #999999;
-    padding-right: 20px;
+    padding-inline-end: 20px;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -1079,7 +1079,7 @@ nav ul li a:hover {
 }
 .extras #desktop-menu {
     display: block;
-    margin-right: 22px;
+    margin-inline-end: 22px;
 }
 .extras a i {
     font-size: 28px;
@@ -1092,7 +1092,7 @@ nav ul li a:hover {
     width: 50px;
     height: 50px;
     margin-left: 10px;
-    margin-right: 30px;
+    margin-inline-end: 30px;
 }
 .line1 {
     stroke-dasharray: 60 207;
@@ -1299,7 +1299,7 @@ ul.social-media-icon li a.t{
     background-color: #2f98e1;
 }
 ul.social-media-icon li{
-    margin-right: 10px;
+    margin-inline-end: 10px;
 }
 ul.social-media-icon li:hover a i {
     transform: rotate(360deg);
@@ -1536,14 +1536,14 @@ ul.age li{
     border-radius: 15px;
     font-size: 30px;
     color: white;
-    margin-right: 20px;
+    margin-inline-end: 20px;
 }
 form.one input[type="text"] {
     height: 66px;
     width: 100%;
     padding-left: 25px;
     outline: 0;
-    margin-right: 40px;
+    margin-inline-end: 40px;
     border-radius: 50px;
     margin-bottom: 20px;
     color: #555;
@@ -1632,7 +1632,7 @@ ul.social-media-footer {
 ul.social-media-footer li i {
     border-radius: 29px;
     margin-left: 15px;
-    margin-right: 15px;
+    margin-inline-end: 15px;
     height: 50px;
     width: 50px;
     align-items: center;
@@ -1655,7 +1655,7 @@ ul.social-media-footer li:hover a i {
 ul.social-media-footer a {
     color: white;
     font-size: 18px;
-    padding-right: 35px;
+    padding-inline-end: 35px;
 }
 footer:before {
     content: "";
@@ -1788,7 +1788,7 @@ footer:before {
     padding-top: 30px;
 }
 .quote-img img {
-    margin-right: 20px;
+    margin-inline-end: 20px;
     background-color: #9539f0;
     padding: 30px 20px;
     border-radius: 20px;
@@ -1961,8 +1961,8 @@ ul.social-media-footer.head {
     margin-top: 20px;
 }
 ul.social-media-footer.head li i {
-   margin-left: 0px;
-    margin-right: -25px;
+   margin-inline-start: 0px;
+    margin-inline-end: -25px;
     background-color: transparent; 
     border: 1px solid #737373;
 }
@@ -2069,11 +2069,11 @@ ul.social-media-footer.head li a i:hover {
     position: relative;
 }
 .blog-detail-data ul li{
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 
 .blog-detail-data ul li a span {
-    padding-right: 10px;
+    padding-inline-end: 10px;
     font-size: 8px;
 }
 .blog-detail-data ul li a{
@@ -2082,7 +2082,7 @@ ul.social-media-footer.head li a i:hover {
     text-transform: capitalize;
 }
 .blog-detail-data ul li a i{
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 .img-data{
     position: relative;
@@ -2108,7 +2108,7 @@ ul.social-media-footer.head li a i:hover {
     margin: 0;
 }
 .marker img{
-    margin-right: 10px;
+    margin-inline-end: 10px;
     margin-left: 30px;
     border-radius: 20px;
 }
@@ -2223,7 +2223,7 @@ ul.social-media-icon.blog-two {
     border: 1px solid #dadada;
     width: 100%;
     padding: 20px 35px;
-    margin-right: 20px;
+    margin-inline-end: 20px;
     /* padding-left: 36px; */
     border-radius: 20px;
 }
@@ -2231,7 +2231,7 @@ ul.social-media-icon.blog-two {
     padding-left: 10px;
 }
 .previews a i {
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 .previews.next {
     text-align: end;
@@ -2249,7 +2249,7 @@ ul.social-media-icon.blog-two {
     border-radius: 20px;
 }
 .about-author img {
-    margin-right: 20px;
+    margin-inline-end: 20px;
 }
 .post {
     display: flex;
@@ -2569,7 +2569,7 @@ form.blog input[type="text"] {
 .photography.portfolio-two a.button.button--moema.button--text-thick.button--text-upper.button--size-s {
     margin-bottom: 30px;
 }
-.photography span{s
+.photography span{
     font-size: 18px;
     font-weight: bold;
     color: #999999;
@@ -2577,7 +2577,7 @@ form.blog input[type="text"] {
 li.client-data i {
     font-size: 34px;
     font-weight: 500;
-    padding-right: 20px;
+    padding-inline-end: 20px;
 }
 li.client-data {
     display: flex;
@@ -2641,7 +2641,7 @@ ul.client-info button.button.load.button--moema.button--text-thick.button--text-
     color: #555;
 }
 .provide li i {
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 .profile-provide-img img{
     width: 100%;
@@ -2665,7 +2665,7 @@ ul.client-info button.button.load.button--moema.button--text-thick.button--text-
     background-color: var(--color-white);
     padding: 20px;
     border-radius: 12px;
-    margin-right: 20px;
+    margin-inline-end: 20px;
 }
 .prev-work-one a{
     color: var(--color-black);
@@ -2676,7 +2676,7 @@ ul.client-info button.button.load.button--moema.button--text-thick.button--text-
 }
 .prev-work-one a.padingg i {
     margin-left: 20px;
-    margin-right: 0;
+    margin-inline-end: 0;
 }
 .photography.portfolio-two ul.client-info {
     border: 0;
@@ -2760,7 +2760,7 @@ form.one.error-input input[type="text"] {
     width: 68%;
     margin-top: 30px;
     background-color: transparent;
-    margin-right: 0;
+    margin-inline-end: 0;
 }
 .error {
     background-color: white;
